[package]
name = "ls"
version = "0.1.0"
authors = ["Tanner Babcock <babkock@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
clap = "2.33.0"
number_prefix = "0.2.8"
term_grid = "0.1.5"
termsize = "0.1.6"
time = "0.1.40"
lazy_static = "1.0.1"
unicode-width = "0.1.5"
libc = "0.2"
assert_cli = "0.6.3"

